fix: spacing between title and video and two column layout for swam page #3

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body {
   font-size: 100%; }*/
 
 h1 {
-    margin-bottom: 0em;
+    margin-bottom: 1em;
     color: #e6782f;
     font-size: 170%;
     font-family: 'Open Sans';
@@ -40,7 +40,7 @@ h1 {
 }
 
 h2 {
-    margin-bottom: 0em;
+    margin-bottom: 0.8em;
     color: #e6782f;
     font-size: 125%;
     font-family: 'Open Sans';
@@ -48,7 +48,7 @@ h2 {
 }
 
 h3 {
-    margin-bottom: 0em;
+    margin-bottom: 0.5em;
     color: #e6782f;
     font-size: 125%;
     font-family: 'Open Sans';
@@ -317,9 +317,17 @@ div#footer {
     margin-right: auto;
 }
 
-.technology .Trio {
-    margin-left: 0px;
-    float: right;
+.technology .twocolumn{
+   display: flex;
+   flex-wrap: wrap;
+}
+
+.technology .twocolumn .leftcolumn{
+  flex: 1;
+}
+
+.technology .twocolumn .rightcolumn{
+  flex: 1;
 }
 
 .technology .swan {
